--- a/CalculatorApp/CalculatorApp.csproj
+++ b/CalculatorApp/CalculatorApp.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <!-- Project is not a test project -->
+    <SonarQubeTestProject>false</SonarQubeTestProject>
+  </PropertyGroup>
+
 </Project>
